--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StudentId" class="control-label"></label>
-                <input asp-for="StudentId" class="form-control" />
-                <span asp-validation-for="StudentId" class="text-danger"></span>
+                <label asp-for="StudentIdNum" class="control-label"></label>
+                <input asp-for="StudentIdNum" class="form-control" />
+                <span asp-validation-for="StudentIdNum" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNum" class="control-label"></label>
