--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StudentId)
+                @Html.DisplayNameFor(model => model.StudentIdNum)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNum)
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StudentId)
+                @Html.DisplayFor(modelItem => item.StudentIdNum)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNum)
