Renamed some properties

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.DeviceNum)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DeviceNumRTC)
+                @Html.DisplayNameFor(model => model.RTCNum)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DeviceStatus)
@@ -52,7 +52,7 @@
                 @Html.DisplayNameFor(model => model.PhoneNum)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EmailAddress)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
         </tr>
     </thead>
@@ -69,7 +69,7 @@
                 @Html.DisplayFor(mItem => item.DeviceNum)
             </td>
             <td>
-                @Html.DisplayFor(mItem => item.DeviceNumRTC)
+                @Html.DisplayFor(mItem => item.RTCNum)
             </td>
             <td>
                 @Html.DisplayFor(mItem => item.DeviceStatus)
@@ -99,7 +99,7 @@
                 @Html.DisplayFor(mItem => item.PhoneNum)
             </td>
             <td>
-                @Html.DisplayFor(mItem => item.EmailAddress)
+                @Html.DisplayFor(mItem => item.Email)
             </td>
         </tr>
 }
