--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayNameFor(model => model.FName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                @Html.DisplayNameFor(model => model.LName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.StudentIdNum)
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.PhoneNum)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EmailAddress)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th></th>
         </tr>
@@ -34,10 +34,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
+                @Html.DisplayFor(modelItem => item.FName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.LName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StudentIdNum)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.PhoneNum)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EmailAddress)
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
