--- a/Views/DeviceModels/Create.cshtml
+++ b/Views/DeviceModels/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LLPApp.Models.DeviceModel
+﻿@model LLPApp.Models.DeviceModelCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
@@ -33,9 +33,9 @@
                 <span asp-validation-for="ModelNum" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImgUrl" class="control-label"></label>
-                <input type="file" class="form-control"/>
-                <span asp-validation-for="ImgUrl" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" class="form-control"/>
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
