--- a/Views/DeviceModels/Edit.cshtml
+++ b/Views/DeviceModels/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model LLPApp.Models.DeviceModel
+﻿@model LLPApp.Models.DeviceModelEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,12 +10,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ImagePath" />
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                <select asp-for="Type" asp-items="Html.GetEnumSelectList<DeviceType>()" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -32,6 +33,12 @@
                 <label asp-for="ModelNum" class="control-label"></label>
                 <input asp-for="ModelNum" class="form-control" />
                 <span asp-validation-for="ModelNum" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <img src="@("/img/devicemodel/" + (Model.ImagePath ?? "noimage.jpg"))" width="200" height="200" />
+                <input asp-for="Image" type="file" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
